--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost/man_employee
 spring.datasource.username=root
 spring.datasource.password=manh
+
 #Xac dinh lam viec voi MySQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #Xac dinh cach tao CSDL
@@ -17,3 +18,6 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 #Jwt properties
 com.jwt.secret=nmanh3007
 com.jwt.expiration=86400000
+com.jwt.refreshExpiration=604800000
+#com.jwt.expiration=60000
+#com.jwt.refreshExpiration=120000
