--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost/man_employee
+#spring.datasource.url=jdbc:mysql://localhost/man_employee
+spring.datasource.url=jdbc:mysql://localhost:3306/man_employee
 spring.datasource.username=root
 spring.datasource.password=manh
 
@@ -15,6 +16,8 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #Set timezone
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+spring.main.allow-circular-references=true
 #Jwt properties
 com.jwt.secret=nmanh3007
 com.jwt.expiration=86400000
